# AIBallstic

./: .gitignore  Cargo.toml  README.md  bevy_uv_test  bevy_uv_test.rs  bevy_uv_test2  bevy_uv_test2.rs  build_wasm.sh  index.html
.github/workflows/: deploy-wasm.yml
assets/: missiles.json
docs/: PHYSICS_MODEL.md
src/: lib.rs  main.rs  missiles.rs  sim.rs
src/physics/: aerodynamics.rs  atmosphere.rs  constants.rs  earth.rs  gravity.rs  integration.rs  mod.rs  propulsion.rs
