[package]
name = "aiballistic"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17", features = ["jpeg"] }
bevy_egui = { version = "0.37", features = ["manage_clipboard", "open_url"] }
glam = "0.30"
rand = "0.8"
rand_distr = "0.4"
chrono = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
nalgebra = "0.34.1"
egui_plot = "0.33"
